--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -7,14 +7,14 @@
         * {padding: 0;margin: 0;box-sizing:border-box;font-family: sans-serif;}
         .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em;}
         .right{display:flex;justify-contents: end;font-size: 2em;padding: 1em;}
-        header{height: 10vh;background: #1f0000;color: white;top: 0;display:flex;justify-content: space-between;align-items: center;}
+        header{height: 10vh;background: #1f0000;color: blue;top: 0;display:flex;justify-content: space-between;align-items: center;}
         footer {height:5vh;display:flex;justify-content: flex-end;padding: 0 2vw;align-items: center;}
     </style>
 </head>
 <body>
     <header>
         <div class="left">Daniel Granja</div>
-        <nav class="right"><a href="">sadsad</a></nav>
+        <nav class="right"><a href="">menu</a></nav>
 
 
         <main>
