--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -15,7 +15,9 @@
 <body>
     <header>
         <div class="left">Daniel Granja</div>
-        <nav class="right"><a href="">menu</a></nav>
+        <nav class="right"><a href="{% url 'portfolio:home' %}">menu</a>
+
+        </nav>
 
 
         <main>
