--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -1,8 +1,9 @@
-        * {padding: 0;margin: 0;box-sizing:border-box;font-family: sans-serif;}
+        * {padding: 0;margin: 0;font-family: sans-serif;}
         .background{
                 background-image: url("../images/coding.gif");background-size: cover;
         }
         .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em;}
         .right{display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;}
+
         header{height: 10vh;background: #1f0000;color: blue;top: 0;display:flex;justify-content: space-between;align-items: center;}
         footer{position: fixed;right: 0;bottom: 0;width: 100%;background-color: #86bbea;color: blue;text-align: center;}
