--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -12,10 +12,11 @@
 <body class="background">
     <header>
         <div class="left">Daniel Granja</div>
-        <nav class="right">
+        <nav class="right" >
             <a class="right" href="{% url 'portfolio:home' %}">Home</a>
             <a class="right" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
             <a class="right" href="{% url 'portfolio:formação' %}">Formação</a>
+
             <a class="right" href="{% url 'portfolio:projetos' %}">Projetos</a>
 
 
@@ -30,7 +31,7 @@
 
 
 
-    <footer style="">
+    <footer >
         <div>
             ULHT : 2022
         </div>
