--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -1,9 +1,38 @@
         * {padding: 0;margin: 0;font-family: sans-serif;}
         .background{
-                background-image: url("../images/coding.gif");background-size: cover;
+                background-image: url("../images/coding.gif");background-size: cover; background-repeat: no-repeat;background-color:#201120FF ;
         }
         .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em;}
         .right{display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;}
 
-        header{height: 10vh;background: #1f0000;color: blue;top: 0;display:flex;justify-content: space-between;align-items: center;}
-        footer{position: fixed;right: 0;bottom: 0;width: 100%;background-color: #86bbea;color: blue;text-align: center;}
+
+        .rright{
+                position: sticky;
+                display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;
+                        background:none;
+                        border: solid 1px #121212;
+                        transition: color 200ms;
+}
+        .rright:is(:hover,:focus){
+                color: white;
+        }
+        .rright::after{
+                position: absolute;
+                content: '';
+                inset:0;
+                z-index: -1;
+
+                 background-color: #121212;
+
+                transform-origin: left;
+                transform: scaleX(0);
+                transition: transform 500ms;
+        }
+
+        .rright:is(:hover,:focus)::after{
+                transform: scale(1);
+        }
+
+
+        header{height: 10vh;background: #201120FF;color: blue;top: 0;display:flex;justify-content: space-between;align-items: center;}
+        footer{position: fixed;right: 0;bottom: 0;width: 100%;background-color: #201120FF;color: white;text-align: center;}
