--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/estilos.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/estilos.css'%}"/>
 
     {% block style %}{% endblock style %}
 
@@ -13,11 +13,11 @@
     <header>
         <div class="left">Daniel Granja</div>
         <nav class="right" >
-            <a class="right" href="{% url 'portfolio:home' %}">Home</a>
-            <a class="right" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
-            <a class="right" href="{% url 'portfolio:formação' %}">Formação</a>
+            <a class="rright" href="{% url 'portfolio:home' %}">Home</a>
+            <a class="rright" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
+            <a class="rright" href="{% url 'portfolio:formação' %}">Formação</a>
 
-            <a class="right" href="{% url 'portfolio:projetos' %}">Projetos</a>
+            <a class="rright" href="{% url 'portfolio:projetos' %}">Projetos</a>
 
 
         </nav>
