--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -2,11 +2,12 @@
         .background{
                 background-image: url("../images/coding.gif");background-size: cover; background-repeat: no-repeat;background-color:#201120FF ;
         }
-        .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em;}
+        .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em; color: white}
         .right{display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;}
 
 
         .rright{
+                color: white;
                 position: sticky;
                 display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;
                         background:none;
@@ -14,7 +15,7 @@
                         transition: color 200ms;
 }
         .rright:is(:hover,:focus){
-                color: white;
+                color: black;
         }
         .rright::after{
                 position: absolute;
@@ -22,7 +23,7 @@
                 inset:0;
                 z-index: -1;
 
-                 background-color: #121212;
+                 background-color: white;
 
                 transform-origin: left;
                 transform: scaleX(0);
