--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -18,6 +18,7 @@
             <a class="rright" href="{% url 'portfolio:formação' %}">Formação</a>
 
             <a class="rright" href="{% url 'portfolio:projetos' %}">Projetos</a>
+            <a class="rright" href="{% url 'portfolio:blog' %}">Blog</a>
 
 
         </nav>
