--- a/lab8/portfolio/templates/portfolio/edita.html
+++ b/lab8/portfolio/templates/portfolio/edita.html
@@ -1,11 +1,21 @@
+{% load static %}
+
+<style>
+    body{
+        background-color: cornflowerblue;
+    }
+</style>
+<link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/estilos.css'%}"/>
 {% block main %}
 <h3>Altera o teu Post aqui</h3>
 <form action="{% url 'portfolio:edita' post_id %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-
-        <a href="{% url 'portfolio:blog' %}" role="button" >Cancelar</a>
-        <input type="submit" value="Gravar">
+<nav class="right">
+        <a class="rright"  href="{% url 'portfolio:blog' %}"  >Cancelar</a>
+        <input  class="rright" type="submit" value="Gravar">
+        <a class="rright" href="{% url 'portfolio:apaga' post_id %}">Apagar</a>
+</nav>
 </form>
 
 
