--- a/lab8/portfolio/templates/portfolio/nova.html
+++ b/lab8/portfolio/templates/portfolio/nova.html
@@ -1,15 +1,28 @@
 
 
 
+{% load static %}
+
+<style>
+    body{
+        background-color: cornflowerblue;
+    }
+</style>
+<link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/estilos.css'%}"/>
 {% block main %}
-	<h3>Criacao de um Post</h3>
-    <form action="" method="POST">
+<h3>Criacao de um Post</h3>
+<form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
+<nav class="right">
+        <a class="rright"  href="{% url 'portfolio:blog' %}"  >Cancelar</a>
+        <input  class="rright" type="submit" value="Gravar">
 
-        <a href="{% url 'portfolio:blog' %}" role="button" >Cancelar</a>
-        <input type="submit" value="Gravar"  >
-    </form>
+</nav>
+</form>
 
-{% endblock main%}
+
+{% endblock %}
+
+
 
