--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -1,39 +1,101 @@
-        * {padding: 0;margin: 0;font-family: sans-serif;}
-        .background{
-                background-image: url("../images/coding.gif");background-size: cover; background-repeat: no-repeat;background-color:#201120FF ;
-        }
-        .left{display:flex;justify-content: space-between;font-size: 2em;padding: 1em; color: white}
-        .right{display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;}
-
-
-        .rright{
-                color: white;
-                position: sticky;
-                display:flex;justify-contents: space-between;font-size: 30px;padding: 20px;margin: 20px;
-                        background:none;
-                        border: solid 1px #121212;
-                        transition: color 200ms;
+* {
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
 }
-        .rright:is(:hover,:focus){
-                color: black;
-        }
-        .rright::after{
-                position: absolute;
-                content: '';
-                inset:0;
-                z-index: -1;
 
-                 background-color: white;
+.background {
+    background-image: url("../images/coding.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #201120FF;
+}
 
-                transform-origin: left;
-                transform: scaleX(0);
-                transition: transform 500ms;
-        }
+.left {
+    display: flex;
+    justify-content: space-between;
+    font-size: 2em;
+    padding: 1em;
+    color: white
+}
 
-        .rright:is(:hover,:focus)::after{
-                transform: scale(1);
-        }
+.right {
+    display: flex;
+    justify-contents: space-between;
+    font-size: 30px;
+    padding: 20px;
+    margin: 20px;
+}
 
 
-        header{height: 10vh;background: #201120FF;color: blue;top: 0;display:flex;justify-content: space-between;align-items: center;}
-        footer{position: fixed;right: 0;bottom: 0;width: 100%;background-color: #201120FF;color: white;text-align: center;}
+.rright {
+    color: white;
+    position: sticky;
+    display: flex;
+    justify-contents: space-between;
+    font-size: 30px;
+    padding: 20px;
+    margin: 20px;
+    background: none;
+    border: solid 1px #121212;
+    transition: color 200ms;
+}
+
+.rright:is(:hover,:focus) {
+    color: black;
+}
+
+.rright::after {
+    position: absolute;
+    content: '';
+    inset: 0;
+    z-index: -1;
+
+    background-color: white;
+
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: transform 500ms;
+}
+
+.container {
+    display: block;
+    justify-content: center;
+
+}
+
+.container > div {
+    width: 70%;
+    padding: 2%;
+    margin-top: 1%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    box-shadow: inset 0 0 1em gold, 0 0 1em red;
+    height: 100px;
+}
+
+.rright:is(:hover,:focus)::after {
+    transform: scale(1);
+}
+
+
+header {
+    height: 10vh;
+    background: #201120FF;
+    color: blue;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #201120FF;
+    color: white;
+    text-align: center;
+}
