--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -39,6 +39,7 @@
     background: none;
     border: solid 1px #121212;
     transition: color 200ms;
+
 }
 
 .rright:is(:hover,:focus) {
@@ -58,9 +59,12 @@
     transition: transform 500ms;
 }
 
+
+
 .container {
     display: block;
     justify-content: center;
+
 
 }
 
@@ -70,8 +74,8 @@
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
-    box-shadow: inset 0 0 1em gold, 0 0 1em red;
+    background-color: #201120FF;
+    box-shadow: inset 0 0 20px blue, 0 0 50px green;
     height: 100px;
 }
 
