--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport"  content="width=device-width,initial-scale=1.0
+">
     <title>Title</title>
 {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/estilos.css'%}"/>
@@ -14,11 +15,14 @@
         <div class="left">Daniel Granja</div>
         <nav class="right" >
             <a class="rright" href="{% url 'portfolio:home' %}">Home</a>
+            <a class="rright" href="{% url 'portfolio:licenciatura' %}">Licenciatura</a>
             <a class="rright" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
             <a class="rright" href="{% url 'portfolio:formação' %}">Formação</a>
 
             <a class="rright" href="{% url 'portfolio:projetos' %}">Projetos</a>
             <a class="rright" href="{% url 'portfolio:blog' %}">Blog</a>
+             <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
+             <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
 
 
         </nav>
