--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -27,6 +27,10 @@
     margin: 20px;
 }
 
+.container{
+
+}
+
 
 .rright {
     color: white;
@@ -75,10 +79,19 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #201120FF;
-    box-shadow: inset 0 0 20px blue, 0 0 50px green;
+    box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
     height: 100px;
 }
 
+.containerReverso{
+    width: 70%;
+    padding: 2%;
+    margin-top: 1%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #201120FF;
+    box-shadow: rgba(27, 250, 2, 0.8) -5px -5px, rgba(45, 204, 21, 0.6) 10px -10px, rgba(16, 105, 4, 0.4) -15px -15px, rgba(36, 117, 37, 0.2) -20px -20px, rgba(240, 46, 170, 0.05) -25px -25px;
+}
 .rright:is(:hover,:focus)::after {
     transform: scale(1);
 }
@@ -103,3 +116,5 @@ footer {
     color: white;
     text-align: center;
 }
+
+
