--- a/lab8/portfolio/templates/portfolio/blog.html
+++ b/lab8/portfolio/templates/portfolio/blog.html
@@ -5,7 +5,7 @@
 {% block main %}
 	<h3 style="color:white">Blog</h3>
 
-    <a class="rright" href="{% url 'portfolio:nova' %}" style="justify-content: center;align-items: center; width: 15%;left: 42%; background-color: cornflowerblue">Criar Post</a>
+    <a class="rright" href="{% url 'portfolio:nova' %}" style="justify-content: center;align-items: center; width: 15%;left: 42%; background-color: green">Criar Post</a>
 <div class="container">
     {% for posts in post %}
         <div>
@@ -21,7 +21,7 @@
         <p style="color: white">
         Descrição: {{ posts.descricao }}.
         </p>
-         <a class="rright" href="{% url 'portfolio:edita' posts.id %}" style=" width: 15%;float: right;margin-bottom: 100px ;margin-top: 0px; background-color: cornflowerblue">Edita Post</a>
+         <a class="rright" href="{% url 'portfolio:edita' posts.id %}" style=" width: 15%;float: right;margin-bottom: 100px ;margin-top: 0px; background-color: green">Edita Post</a>
  </div>
 
 
