--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -21,6 +21,7 @@
 
             <a class="rright" href="{% url 'portfolio:projetos' %}">Projetos</a>
             <a class="rright" href="{% url 'portfolio:blog' %}">Blog</a>
+            <a class="rright" href="{% url 'portfolio:quizz' %}">Quizz</a>
              <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
              <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
 
