--- a/lab8/portfolio/templates/portfolio/contacto.html
+++ b/lab8/portfolio/templates/portfolio/contacto.html
@@ -2,5 +2,10 @@
 
 {% block main %}
 	<h3 style="color: white">Contacto</h3>
-    <p>texto texto texto texto texto texto texto </p>
+    <p class="containerContacto" style="color: white">texto texto texto texto texto texto texto
+    texto texto texto texto texto texto texto
+    texto texto texto texto texto texto texto
+    texto texto texto texto texto texto texto
+    texto texto texto texto texto texto texto
+    texto texto texto texto texto texto texto </p>
 {% endblock main%}
