hoover animation no nome com transitions

--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -12,7 +12,7 @@
 </head>
 <body class="background">
     <header>
-        <div class="left">Daniel Granja</div>
+        <div class="textChange">Daniel Granja</div>
         <nav class="right" >
             <a class="rright" href="{% url 'portfolio:home' %}">Home</a>
             <a class="rright" href="{% url 'portfolio:licenciatura' %}">Licenciatura</a>
