--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -16,15 +16,17 @@
     justify-content: space-between;
     font-size: 2em;
     padding: 1em;
-    color: white
+    color: white;
 }
+
+
 
 .right {
     display: flex;
     justify-contents: space-between;
     font-size: 30px;
-    padding: 20px;
-    margin: 20px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .container{
@@ -38,8 +40,8 @@
     display: flex;
     justify-contents: space-between;
     font-size: 30px;
-    padding: 20px;
-    margin: 20px;
+    padding: 10px;
+    margin: 10px;
     background: none;
     border: solid 1px #121212;
     transition: color 200ms;
@@ -119,5 +121,37 @@ footer {
     color: white;
     text-align: center;
 }
+
+.textChange {
+
+    display: flex;
+    justify-content: space-between;
+    font-size: 3em;
+
+    color: white;
+    background: linear-gradient(
+      to right,
+      rgba(100, 200, 200, 1),
+      rgba(100, 200, 200, 1)
+    ),
+    linear-gradient(
+      to right,
+      rgba(255, 0, 0, 1),
+      rgba(255, 0, 180, 1),
+      rgba(0, 100, 200, 1)
+  );
+  background-size: 100% 3px;
+  background-position: 100% 100%, 0% 100%;
+
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+
+}
+
+.textChange:hover {
+  background-size: 0 3px, 100% 3px;
+}
+
+
 
 
