--- a/lab8/portfolio/templates/portfolio/apresentação.html
+++ b/lab8/portfolio/templates/portfolio/apresentação.html
@@ -3,7 +3,7 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3>Apresentacao</h3>
+	<h3 style="color: white">Apresentacao</h3>
     <p>texto texto texto texto texto texto texto </p>
 {% endblock main%}
 
