--- a/lab8/portfolio/templates/portfolio/quizz.html
+++ b/lab8/portfolio/templates/portfolio/quizz.html
@@ -1,6 +1,11 @@
 {% extends 'portfolio/layout.html' %}
 
+
 {% block main %}
 	<h3 style="color: white">Quizz</h3>
-    <p>texto texto texto texto texto texto texto </p>
+    <form style="color: white" class="containerQuizz" action="" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input  type="submit" value="Terminar!" >
+            </form>
 {% endblock main%}
