layout quizz feito

--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -65,6 +65,9 @@
     transition: transform 500ms;
 }
 
+.rright:is(:hover,:focus)::after {
+    transform: scale(1);
+}
 
 
 .container {
@@ -110,12 +113,13 @@
 
 .containerQuizz{
     display: flex;
+    flex-flow: column wrap;
     justify-content: center;
-    width: 90%;
+    width: 40%;
     height: auto;
     padding: 2%;
     margin-top: 1%;
-    margin-left: auto;
+    margin-left: 2%;
     margin-right: auto;
     background-color: #201120FF;
     box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
@@ -126,10 +130,14 @@
     box-shadow: rgba(27, 250, 2, 0.8) -5px -5px, rgba(45, 204, 21, 0.6) -10px -10px, rgba(16, 105, 4, 0.4) -15px -15px, rgba(36, 117, 37, 0.2) -20px -20px;
 }
 
+.btnTerminar{
 
-.rright:is(:hover,:focus)::after {
-    transform: scale(1);
+    width: 10%;
+    background-color: green;
 }
+
+
+
 
 
 header {
@@ -182,6 +190,11 @@ footer {
   background-size: 0 3px, 100% 3px;
 }
 
+.imageGrafico{
+    position: absolute;
+        top: 13%;
+        right: 1%;
+}
 
 
 
