--- a/lab8/portfolio/templates/portfolio/quizz.html
+++ b/lab8/portfolio/templates/portfolio/quizz.html
@@ -6,6 +6,7 @@
     <form style="color: white" class="containerQuizz" action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input  type="submit" value="Terminar!" >
+                <input class="btnTerminar" type="submit" value="Terminar!" >
             </form>
+    <img class="imageGrafico" src="static/portfolio/images/dadosGraficos.png">
 {% endblock main%}
