--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -127,7 +127,7 @@
 }
 
 .containerQuizz:hover{
-    box-shadow: rgba(27, 250, 2, 0.8) -5px -5px, rgba(45, 204, 21, 0.6) -10px -10px, rgba(16, 105, 4, 0.4) -15px -15px, rgba(36, 117, 37, 0.2) -20px -20px;
+    box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
 .btnTerminar{
@@ -194,6 +194,38 @@ footer {
     position: absolute;
         top: 13%;
         right: 1%;
+}
+
+.containerProjeto {
+    display: block;
+    justify-content: center;
+
+
+
+}
+.containerProjeto img{
+    height: 300px;
+    width: auto;
+    position: relative;
+    bottom: 60px;
+   left: 108%;
+
+
+}
+
+.containerProjeto > div {
+    width: 70%;
+    padding: 2%;
+    margin-top: 3%;
+    margin-left: 2%;
+
+    background-color: #201120FF;
+    box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
+    height: 250px;
+    border-radius: 10px;
+}
+.containerProjeto > div:hover{
+    box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
 
