--- a/lab8/portfolio/templates/portfolio/projetos.html
+++ b/lab8/portfolio/templates/portfolio/projetos.html
@@ -14,6 +14,13 @@
         Descrição: {{ projeto.descricao }}.
         </p>
 
+            <p style="color: white">
+                Data: {{ projeto.data }}.
+            </p>
+            <p style="color: white">
+                Linguagens: {{ projeto.linguagens }}
+            </p>
+
 
 
         <img src="{{projeto.imagem.url}}">
