Changes containers formacao e imagens dos projetos

--- a/lab8/portfolio/templates/portfolio/formação.html
+++ b/lab8/portfolio/templates/portfolio/formação.html
@@ -4,7 +4,7 @@
 	<h3 style="color:white">Formação</h3>
 
 
-<div class="containerProjeto">
+<div class="containerFormacao">
     {% for cadeira in cadeiras %}
         <div>
     <p style="color: white">
