--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -126,7 +126,9 @@
     border-radius: 10px;
 }
 
-
+.errorlist{
+display:none;
+}
 
 .containerQuizz:hover{
     box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
