--- a/lab8/portfolio/templates/portfolio/apresentação.html
+++ b/lab8/portfolio/templates/portfolio/apresentação.html
@@ -3,7 +3,12 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color: white">Apresentacao</h3>
-    <p>texto texto texto texto texto texto texto </p>
+	<h3 class="titulo">Apresentacao</h3>
+    <div class="containerContacto">Estudo engenharia informática, na Universidade Lusófona.
+    <br>
+    Estou no 2 Ano e faço voluntariado na associação ajuda de mãe
+    <br>
+    Gosto de Aprender coisas novas, especialmente se tiverem ligadas a novas técnologias.
+    </div>
 {% endblock main%}
 
