--- a/lab8/portfolio/templates/portfolio/blog.html
+++ b/lab8/portfolio/templates/portfolio/blog.html
@@ -3,7 +3,7 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color:white">Blog</h3>
+	<h3 class="titulo">Blog</h3>
 
     <a class="rright" href="{% url 'portfolio:nova' %}" style="justify-content: center;align-items: center; width: 15%;left: 42%; background-color: green">Criar Post</a>
 <div class="container">
