--- a/lab8/portfolio/templates/portfolio/home.html
+++ b/lab8/portfolio/templates/portfolio/home.html
@@ -2,6 +2,6 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3>Home</h3>
-    <p>texto texto texto texto texto texto texto </p>
+	<h3 class="titulo">Home</h3>
+    <p style="color: white">texto texto texto texto texto texto texto </p>
 {% endblock main%}
