--- a/lab8/portfolio/templates/portfolio/licenciatura.html
+++ b/lab8/portfolio/templates/portfolio/licenciatura.html
@@ -2,6 +2,6 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color: white">Licenciatura</h3>
+	<h3 class="titulo">Licenciatura</h3>
     <p>texto texto texto texto texto texto texto </p>
 {% endblock main%}
