--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -93,12 +93,14 @@
 
 
 .containerContacto{
+    font-size: 2em;
+    color: white;
     display: flex;
     justify-content: center;
     width: 50%;
     height: auto;
     padding: 2%;
-    margin-top: 1%;
+    margin-top: 3%;
     margin-left: auto;
     margin-right: auto;
     background-color: #201120FF;
@@ -261,6 +263,37 @@ footer {
     box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
+
+.titulo{
+
+    display: flex;
+   align-items: center;
+    justify-content: center;
+    font-size: 2em;
+
+    color: white;
+    background: linear-gradient(
+      to right,
+      rgba(100, 200, 200, 1),
+      rgba(100, 200, 200, 1)
+    ),
+    linear-gradient(
+      to right,
+      rgba(255, 0, 0, 1),
+      rgba(255, 0, 180, 1),
+      rgba(0, 100, 200, 1)
+  );
+  background-size: 100% 3px;
+  background-position: 50% 100%, 0% 100%;
+
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+
+}
+
+.titulo:hover {
+  background-size: 0 3px, 100% 3px;
+}
 
 
 
