--- a/lab8/portfolio/templates/portfolio/competencias.html
+++ b/lab8/portfolio/templates/portfolio/competencias.html
@@ -2,6 +2,6 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3>Competencias</h3>
+	<h3 class="titulo">Competencias</h3>
     <p>texto texto texto texto texto texto texto </p>
 {% endblock main%}
