--- a/lab8/portfolio/templates/portfolio/contacto.html
+++ b/lab8/portfolio/templates/portfolio/contacto.html
@@ -1,14 +1,14 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color: white">Contacto</h3>
-    <div class="containerContacto" style="color: white">
+	<h3 class="titulo">Contacto</h3>
+    <div class="containerContacto" >
 <p>
     Gmail: danielgranja@gmail.com
 
         <br>
 
-    <a style="color:white;" href="https://pt.linkedin.com/in/daniel-granja-436058209?trk=people-guest_people_search-card&challengeId=AQHOZex8RMbvRgAAAYD8H8rJbH488r1_Q2M58-pAT3fhAhwniQfb9pV_7diXokERi_htb65-U74RbJw8_2JNlfdLxNS6njSe4g&submissionId=e1b6290a-1c67-f216-4fed-cdc098a0b946&original_referer=">Linkedin</a>
+    <a style="color:white;;" href="https://pt.linkedin.com/in/daniel-granja-436058209?trk=people-guest_people_search-card&challengeId=AQHOZex8RMbvRgAAAYD8H8rJbH488r1_Q2M58-pAT3fhAhwniQfb9pV_7diXokERi_htb65-U74RbJw8_2JNlfdLxNS6njSe4g&submissionId=e1b6290a-1c67-f216-4fed-cdc098a0b946&original_referer=">Linkedin</a>
 </p>
     </div>
 {% endblock main%}
