--- a/lab8/portfolio/templates/portfolio/projetos.html
+++ b/lab8/portfolio/templates/portfolio/projetos.html
@@ -1,7 +1,7 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color:white">Projetos</h3>
+	<h3 class="titulo">Projetos</h3>
 
 
 <div class="containerProjeto">
