--- a/lab8/portfolio/templates/portfolio/web.html
+++ b/lab8/portfolio/templates/portfolio/web.html
@@ -1,6 +1,6 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 style="color: white">Web</h3>
+	<h3 class="titulo">Web</h3>
     <p>texto texto texto texto texto texto texto </p>
 {% endblock main%}
