--- a/lab8/portfolio/templates/portfolio/licenciatura.html
+++ b/lab8/portfolio/templates/portfolio/licenciatura.html
@@ -3,5 +3,26 @@
 
 {% block main %}
 	<h3 class="titulo">Licenciatura</h3>
-    <p>texto texto texto texto texto texto texto </p>
+   <div class="containerFormacao">
+    {% for cadeira in cadeiras %}
+
+
+        <div>
+    <p style="color: white">
+    Nome: {{cadeira.nome }}.
+    </p>
+        <p style="color: white">
+        Ano: {{ cadeira.ano}}.
+        </p>
+
+            <p style="color: white">
+                Semestre: {{ cadeira.semestre }}.
+            </p>
+            <p style="color: white">
+                Ects: {{ cadeira.ects }}
+            </p>
+
+</div>
+{% endfor %}
+</div>
 {% endblock main%}
