--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -17,13 +17,14 @@
             <a class="rright" href="{% url 'portfolio:home' %}">Home</a>
             <a class="rright" href="{% url 'portfolio:licenciatura' %}">Licenciatura</a>
             <a class="rright" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
-            <a class="rright" href="{% url 'portfolio:formação' %}">Formação</a>
+
 
             <a class="rright" href="{% url 'portfolio:projetos' %}">Projetos</a>
             <a class="rright" href="{% url 'portfolio:blog' %}">Blog</a>
             <a class="rright" href="{% url 'portfolio:quizz' %}">Quizz</a>
              <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
              <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
+            <a class="rright" href="{% url 'portfolio:sobre' %}">Sobre este Site</a>
 
 
         </nav>
