layout web e class web

--- a/lab8/portfolio/templates/portfolio/web.html
+++ b/lab8/portfolio/templates/portfolio/web.html
@@ -2,5 +2,30 @@
 
 {% block main %}
 	<h3 class="titulo">Web</h3>
-    <p>texto texto texto texto texto texto texto </p>
+
+
+<div class="containerWeb">
+    {% for escolhido in web %}
+        <div>
+    <p style="color: white">
+   Titulo : {{escolhido.nome }}.
+    </p>
+        <p style="color: white">
+        Noticia : {{ escolhido.noticia }}.
+        </p>
+
+          <img src="{{escolhido.imagem.url}}">
+
+
+
+
+
+
+ </div>
+
+
+
+
+    {% endfor %}
+</div>
 {% endblock main%}
