--- a/lab8/portfolio/static/portfolio/css/estilos.css
+++ b/lab8/portfolio/static/portfolio/css/estilos.css
@@ -244,6 +244,7 @@ footer {
 
 
 
+
 }
 
 
@@ -253,6 +254,7 @@ footer {
     padding: 2%;
     margin-top: 3%;
     margin-left: 7%;
+    margin-bottom: 2%;
     color: white;
     background-color: #201120FF;
     box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
@@ -263,7 +265,18 @@ footer {
     box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
-
+.tituloAnos{
+    font-size: 2em;
+    display: flex;
+    text-align: center;
+    color: white;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: #64C8C8FF;
+}
 .titulo{
 
     display: flex;
