--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -26,6 +26,7 @@
              <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
              <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
             <a class="rright" href="{% url 'portfolio:sobre' %}">Sobre este Site</a>
+             <a class="rright" href="{% url 'portfolio:login' %}">Login</a>
 
 
         </nav>
