--- a/lab8/portfolio/templates/portfolio/layout.html
+++ b/lab8/portfolio/templates/portfolio/layout.html
@@ -26,8 +26,14 @@
              <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
              <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
             <a class="rright" href="{% url 'portfolio:sobre' %}">Sobre este Site</a>
-             <a class="rright" href="{% url 'portfolio:login' %}">Login</a>
+                {% if not request.user.is_authenticated %}
 
+             <a class="rright" href="{% url 'portfolio:login' %}">Login</a>
+            {% endif %}
+
+            {% if request.user.is_authenticated %}
+                     <a class="rright" href="{% url 'portfolio:logout' %}">Logout</a>
+        {% endif %}
 
         </nav>
 
