--- a/lab8/portfolio/templates/portfolio/blog.html
+++ b/lab8/portfolio/templates/portfolio/blog.html
@@ -3,30 +3,40 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3 class="titulo">Blog</h3>
+    <h3 class="titulo">Blog</h3>
+    {% if request.user.is_authenticated %}
 
-    <a class="rright" href="{% url 'portfolio:nova' %}" style="justify-content: center;align-items: center; width: 15%;left: 42%; background-color: green">Criar Post</a>
-<div class="container">
-    {% for posts in post %}
-        <div>
-    <p style="color: white">
-    Autor: {{posts.autor }}.
-    </p>
+        <a class="rright" href="{% url 'portfolio:nova' %}"
+           style="justify-content: center;align-items: center; width: 15%;left: 42%; background-color: green">Criar
+            Post</a>
+    {% endif %}
 
-        <p style="color: white">
-       Titulo: {{ posts.titulo }}.
-        </p>
+    <div class="container">
+        {% for posts in post %}
+            <div>
+                <p style="color: white">
+                    Autor: {{ posts.autor }}.
+                </p>
 
-
-        <p style="color: white">
-        Descrição: {{ posts.descricao }}.
-        </p>
-         <a class="rright" href="{% url 'portfolio:edita' posts.id %}" style=" width: 15%;float: right;margin-bottom: 100px ;margin-top: 0px; background-color: green">Edita Post</a>
- </div>
+                <p style="color: white">
+                    Titulo: {{ posts.titulo }}.
+                </p>
 
 
+                <p style="color: white">
+                    Descrição: {{ posts.descricao }}.
+                </p>
+                {% if request.user.is_authenticated %}
+                    <a class="rright" href="{% url 'portfolio:edita' posts.id %}"
+                       style=" width: 15%;float: right;margin-bottom: 100px ;margin-top: 0px; background-color: green">Edita
+                        Post</a>
 
-    {% endfor %}
-</div>
-{% endblock main%}
+                {% endif %}
+            </div>
+
+
+
+        {% endfor %}
+    </div>
+{% endblock main %}
 
