--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -18,6 +18,7 @@
                 Data: {{ projeto.data }}.
             </p>
             <p style="color: white">
+                {% load static %}
                 Linguagens: {{ projeto.linguagens }}
             </p>
 
