--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -24,7 +24,7 @@
 
 
                 {% load static %}
-                <img src="{{ projeto.imagem.url }}" alt="Projetos">
+                <img style="color: white" src="{{ projeto.imagem.url }}" alt="Projetos">
 
             </div>
 
