--- a/portfolio/templates/portfolio/web.html
+++ b/portfolio/templates/portfolio/web.html
@@ -14,7 +14,7 @@
         Noticia : {{ escolhido.noticia }}.
         </p>
 
-          <img src="{{escolhido.imagem.url}}">
+          <img src="{{ escolhido.imagem.url }}" alt="">
 
 
 
