update container projetos

--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -8,7 +8,7 @@
         {% for projeto in projetos %}
             <div>
                 <p style="color: white">
-                    Autor: {{ projeto.nome }}.
+                    Nome: {{ projeto.nome }}.
                 </p>
                 <p style="color: white">
                     Descrição: {{ projeto.descricao }}.
