--- a/portfolio/templates/portfolio/quizz.html
+++ b/portfolio/templates/portfolio/quizz.html
@@ -8,5 +8,6 @@
                 {{ form.as_p }}
                 <input class="btnTerminar" type="submit" value="Terminar!" >
             </form>
+    {% load static %}
     <img class="imageGrafico" src="static/portfolio/images/dadosGraficos.png">
 {% endblock main%}
