--- a/portfolio/templates/portfolio/sobre.html
+++ b/portfolio/templates/portfolio/sobre.html
@@ -4,7 +4,7 @@
 	<h3 class="titulo">Sobre Este Site</h3>
 
 
-<div class="containerFormacao">
+<div class="containerSobre">
     {% for escolhido in sobre %}
         <div>
     <p style="color: white">
