--- a/portfolio/static/portfolio/css/estilos.css
+++ b/portfolio/static/portfolio/css/estilos.css
@@ -266,6 +266,34 @@ footer {
     box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
+
+
+.containerSobre {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: left;
+
+
+
+
+}
+
+
+.containerSobre > div {
+
+    width: 13%;
+    padding: 2%;
+    margin: 3% 4% 2%;
+    color: white;
+    background-color: #201120FF;
+    box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
+    height: 250px;
+    border-radius: 10px;
+}
+.containerSobre > div:hover{
+    box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
+}
+
 .tituloAnos{
     font-size: 2em;
     display: flex;
