--- a/portfolio/templates/portfolio/web.html
+++ b/portfolio/templates/portfolio/web.html
@@ -11,7 +11,7 @@
    Titulo : {{escolhido.nome }}.
     </p>
         <p style="color: white">
-        Noticia : {{ escolhido.noticia }}.
+        Link Noticia : {{ escolhido.noticia }}
         </p>
 
           <img src="{{ escolhido.imagem.url }}" alt="">
