Error login message

--- a/portfolio/templates/portfolio/login.html
+++ b/portfolio/templates/portfolio/login.html
@@ -14,5 +14,8 @@
             <p>Password: <input type="password" name="password" placeholder="Username"></p>
             <input type="submit">
         </form>
+    {% if message %}
+                {{ message }}
+            {% endif %}
 
 {% endblock main%}
