trabalhos final de curso

--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -25,6 +25,8 @@
             <a class="rright" href="{% url 'portfolio:quizz' %}">Quizz</a>
              <a class="rright" href="{% url 'portfolio:contacto' %}">Contacto</a>
              <a class="rright" href="{% url 'portfolio:web' %}">Web</a>
+            <a class="rright" href="{% url 'portfolio:tfc' %}">Tfc</a>
+
             <a class="rright" href="{% url 'portfolio:sobre' %}">Sobre este Site</a>
                 {% if not request.user.is_authenticated %}
 
