--- a/portfolio/templates/portfolio/tfc.html
+++ b/portfolio/templates/portfolio/tfc.html
@@ -3,7 +3,45 @@
 {% block main %}
 	<h3 class="titulo">Trabalhos Finais de Curso</h3>
 
+<div class="containerWeb">
 
+        <div>
+    <p>
+        Autores:
+    </p>
+        <p>
+            Orientadores:
+        </p>
+
+            <p>
+                Ano:
+            </p>
+
+            <p>
+                Titulo:
+            </p>
+
+            <p>
+                Resumo:
+            </p>
+
+
+         <img class="imageGrafico" src="/static/portfolio/images/dadosGraficos.png">
+
+
+
+
+
+
+ </div>
+
+
+
+<div>
+
+
+
+</div>
 
 
 
