--- a/portfolio/static/portfolio/css/estilos.css
+++ b/portfolio/static/portfolio/css/estilos.css
@@ -39,7 +39,7 @@
     position: sticky;
     display: flex;
     justify-contents: space-between;
-    font-size: 30px;
+    font-size: 27px;
     padding: 10px;
     margin: 10px;
     background: none;
@@ -366,6 +366,43 @@ footer {
 }
 
 .containerWeb img{
+    height: 300px;
+    width: auto;
+    position: relative;
+    top: 15px;
+
+
+}
+
+
+.containerTfc {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+
+
+
+}
+
+
+.containerTfc > div {
+    text-align: center;
+    width: 30%;
+    padding: 2%;
+    margin-top: 3%;
+    margin-left: 7%;
+    margin-bottom: 2%;
+    color: white;
+    background-color: #201120FF;
+    box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
+    height: 350px;
+    border-radius: 10px;
+}
+.containerTfc > div:hover{
+    box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
+}
+
+.containerTfc img{
     height: 300px;
     width: auto;
     position: relative;
