--- a/portfolio/templates/portfolio/web.html
+++ b/portfolio/templates/portfolio/web.html
@@ -11,7 +11,7 @@
    Titulo : {{escolhido.nome }}.
     </p>
         <p style="color: white">
-        Link Noticia : {{ escolhido.noticia }}
+        <a href="{{ escolhido.noticia }}"  > Link  </a>
         </p>
 
           <img src="{{ escolhido.imagem.url }}" alt="">
