--- a/portfolio/static/portfolio/css/estilos.css
+++ b/portfolio/static/portfolio/css/estilos.css
@@ -386,8 +386,8 @@ footer {
 
 
 .containerTfc > div {
-    text-align: center;
-    width: 30%;
+    text-align: left;
+    width: 60%;
     padding: 2%;
     margin-top: 3%;
     margin-left: 7%;
@@ -395,7 +395,7 @@ footer {
     color: white;
     background-color: #201120FF;
     box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
-    height: 350px;
+    height: auto;
     border-radius: 10px;
 }
 .containerTfc > div:hover{
@@ -404,6 +404,7 @@ footer {
 
 .containerTfc img{
     height: 300px;
+
     width: auto;
     position: relative;
     top: 15px;
