--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -24,6 +24,7 @@
     <header>
         <div class="textChange">Daniel Granja</div>
         <nav class="right" >
+            <a class="rright" href="{% url 'portfolio:api' %}">Api</a>
             <a class="rright" href="{% url 'portfolio:home' %}">Home</a>
             <a class="rright" href="{% url 'portfolio:licenciatura' %}">Licenciatura</a>
             <a class="rright" href="{% url 'portfolio:apresentação' %}">Apresentação</a>
