--- a/portfolio/static/portfolio/css/estilos.css
+++ b/portfolio/static/portfolio/css/estilos.css
@@ -105,6 +105,7 @@
     margin-right: auto;
     background-color: #201120FF;
     box-shadow: rgba(27, 250, 2, 0.8) 5px 5px, rgba(45, 204, 21, 0.6) 10px 10px, rgba(16, 105, 4, 0.4) 15px 15px, rgba(36, 117, 37, 0.2) 20px 20px;
+    
     border-radius: 10px;
 }
 
@@ -438,3 +439,9 @@ footer {
     box-shadow: rgba(92, 199, 248, 0.8) -5px -5px, rgba(8, 128, 190, 0.6) -10px -10px, rgba(6, 44, 175, 0.4) -15px -15px, rgba(0, 0, 23, 0.2) -20px -20px;
 }
 
+.video{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 35%;
+}
