--- a/portfolio/templates/portfolio/sobre.html
+++ b/portfolio/templates/portfolio/sobre.html
@@ -36,6 +36,7 @@
 
     {% endfor %}
 
-<iframe src="https://youtu.be/p1RoKntYuzc" title="Video Explicativo"></iframe>
+<iframe class="video" width="560" height="315" src="https://youtu.be/p1RoKntYuzc" title="Video Explicativo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </div>
 {% endblock main%}
