--- a/portfolio/templates/portfolio/sobre.html
+++ b/portfolio/templates/portfolio/sobre.html
@@ -36,7 +36,7 @@
 
     {% endfor %}
 
-<iframe class="video" width="560" height="315" src="https://youtu.be/p1RoKntYuzc" title="Video Explicativo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/p1RoKntYuzc" title="Video Explicativo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 {% endblock main%}
